proses kenapa anda perlu membuat website ?

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         </nav>
     </header>
     <main>
-        <div class="container banner">
+        <div class="container banner" style="background-image: url('images/bacgroundweb-developer.jpg') ;">
             <div class="banner-items">
                 <div>
                     <div class="banner-title">Jasa Pembuatan Website</div>
-                    <div class="banner-desc">Onlinekan Bisnis atau Perusahaan Anda, Buat Perusahaan Anda Lebih Professional, Raih Jangkauan Pelanggan Lebih Luas, </div>
+                    <div class="banner-desc">Onlinekan Bisnis atau Perusahaan Anda, Buat Perusahaan Anda Lebih Professional, Raih Jangkauan Pelanggan Lebih Luas. </div>
                     <a href="#" class="btn-large-rose" type="button" style="transition: all .15s ease">Pilih Paket</a>
                 </div>
             </div>
@@ -107,7 +107,18 @@
                 </svg>
             </div>
         </div>
+        <div class="container welcome" >
+            <div class="welcome-items">
+                <div>
+                    <div class="welcome-title">Kenapa Anda perlu membuat website ?</div>
+                    <div class="welcome-desc">Pada era digital ini banyak orang mencari segala sesuatu lewat internet  </div>
+                    <div class="welcome-desc"><b>Maka</b> Anda perlu meningkatkan usaha anda <b> di temukan </b>  di internet  </div>
+                    <div class="welcome-desc"><b>Sehingga</b> membuat usaha Anda lebih dikenal luas dan terpercaya  </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
+            <div class="heading">Pilih Paket Sesuai Kebutuhan Anda : </div>
             <div class="service">
                 <div class="service-box">
                     <div class="service-body">
@@ -300,7 +311,7 @@
             </div>
         </div>
         <div class="container">
-            <!-- <div class="heading">Alasan Memilih Jasa Kami</div> -->
+            <div class="heading">Alasan Memilih Jasa Kami</div>
             <div class="keunggulan">
                 <div class="keunggulan-left">
                     <img src="images/pngfind.com-speed-icon-png-5194532.png" class="unggulan-img" alt="" srcset="">
@@ -317,6 +328,15 @@
                 <div class="keunggulan-right">
                     <div class="title">Terjangkau</div>
                     <div class="title-description">Kami menawarkan paket pembuatan website  bagi perorangan, UMKM ataupun perusahaan dengan harga yang relatif terjangkau. </div>
+                </div>
+            </div>
+            <div class="keunggulan">
+                <div class="keunggulan-left">
+                    <img src="images/support.png" class="unggulan-img" alt="" srcset="">
+                </div>
+                <div class="keunggulan-right">
+                    <div class="title">Gratis Support</div>
+                    <div class="title-description">Kami memberikan support gratis jika ada pertanyaan atau kendala</div>
                 </div>
             </div>
         </div>
