proses desain produk

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="container banner" style="background-image: url('images/bacgroundweb-developer.jpg') ;">
             <div class="banner-items">
                 <div>
-                    <div class="banner-title">Jasa Pembuatan Website</div>
-                    <div class="banner-desc">Onlinekan Bisnis atau Perusahaan Anda, Buat Perusahaan Anda Lebih Professional, Raih Jangkauan Pelanggan Lebih Luas. </div>
+                    <div class="banner-title"><h1>Jasa Pembuatan Website - Idcodewebs</h1></div>
+                    <div class="banner-desc"><h2>Onlinekan Bisnis atau Perusahaan Anda, Buat Perusahaan Anda Lebih Professional, Raih Jangkauan Pelanggan Lebih Luas.</h2> </div>
                     <a href="#paket" class="btn-large-rose" type="button" style="transition: all .15s ease">Pilih Paket</a>
                 </div>
             </div>
@@ -82,15 +82,15 @@
         <div class="container welcome" >
             <div class="welcome-items">
                 <div>
-                    <div class="welcome-title">Kenapa Anda perlu membuat website ?</div>
-                    <div class="welcome-desc">Pada era digital ini banyak orang mencari segala sesuatu lewat internet  </div>
-                    <div class="welcome-desc"><b>Maka</b> Anda perlu meningkatkan usaha anda <b> di temukan </b>  di internet  </div>
-                    <div class="welcome-desc"><b>Sehingga</b> membuat usaha Anda lebih dikenal luas dan terpercaya  </div>
+                    <div class="welcome-title"><h1>Kenapa Anda perlu membuat website ?</h1></div>
+                    <div class="welcome-desc"><p>Pada era digital ini banyak orang mencari segala sesuatu lewat internet </p> </div>
+                    <div class="welcome-desc"><p><b>Maka</b> Anda perlu meningkatkan usaha anda <b> di temukan </b>  di internet  </p></div>
+                    <div class="welcome-desc"><p><b>Sehingga</b> membuat usaha Anda lebih dikenal luas dan terpercaya  </p></div>
                 </div>
             </div>
         </div>
         <div class="container">
-            <div id="paket" class="heading">Pilih Paket Sesuai Kebutuhan Anda : </div>
+            <div id="paket" class="heading"><h1>Pilih Paket Sesuai Kebutuhan Anda :</h1> </div>
             <div class="service">
                 <div class="service-box">
                     <div class="service-body">
@@ -357,7 +357,7 @@
         </div>
         <div  id="desain" class="container">
             <div class="heading">Contoh Desain</div>
-            <div class="product">
+            <div class="product padding-4">
                 <div class="product-box" style="background-image: url('images/desainbasic.png'); background-size: 100% auto;">
                     <div class="product-box_title"><a href="#">Paket Basic Company Profile</a></div>
                 </div>
